# python-project-52

./: .gitignore  .sonarignore  Makefile  README.md  build.sh  makefile  pyproject.toml  pytest.ini
.github/workflows/: my_workflow.yml
code/task_manager/: apps.py  urls.py
code/templates/: index.html  labels.html  statuses.html  tasks.html
hexlet-code/: db.sqlite3
hexlet-code/task_manager/: filters.py  forms.py  models.py  settings.py  signals.py  tests.py  urls.py  views.py
hexlet-code/templates/: index.html  labels.html  labels_create.html  labels_delete.html  labels_updating.html  register.html  statuses.html  statuses_create.html  statuses_delete.html  statuses_updating.html  tasks.html  tasks_create.html  tasks_delete.html  tasks_updating.html  updating.html  users.html  users_delete.html
labels/: admin.py  forms.py  models.py  urls.py  views.py
labels/migrations/: 0001_initial.py
statuses/: admin.py  forms.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: apps.py  filters.py  forms.py  models.py  settings.py  signals.py  tests.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  urls.py  views.py
task_manager/migrations/: 0002_users_user.py  0005_remove_tasks_autor_tasks_author_alter_tasks_executor_and_more.py  0008_tasks_description_alter_labels_name_and_more.py  0009_alter_tasks_executor_alter_tasks_author_delete_users.py  0010_alter_tasks_executor.py  0011_alter_tasks_author.py
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
users/: forms.py  urls.py  views.py
(+57 files in other folders)
