[project]
name = "hexlet-code"
version = "0.1.0"
description = "Django Task Manager project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "django>=5.0,<6.0",
  "gunicorn>=23.0",
  "dj-database-url>=2.2",
  "django-bootstrap5>=24.2",
  "django-filter>=24.0",
  "rollbar>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hexlet-code/task_manager"]

[tool.uv]
package = true

