[project]
name = "hexlet-code"
version = "0.1.0"
description = "Django Task Manager project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "django>=5.0,<6.0",
  "gunicorn>=23.0",
  "dj-database-url>=2.2",
  "django-bootstrap5>=24.2",
  "django-filter>=24.0",
  "rollbar>=0.16.0",
  "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[tool.uv]
package = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
pythonpath = ["."]

